# memora

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  automation.md  performance-directions.md
scripts/: check-version.mjs  prepare-updater-config.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/system/: accent.rs  automation.rs  clean.rs  history.rs  memory.rs  minimize.rs  mod.rs  process.rs  settings.rs
src-tauri/src/tray/: icon.rs  mod.rs
src/components/: ContentDialog.tsx  ContextMenu.tsx  Icons.tsx  MemoryGraph.tsx  NavigationView.tsx  SearchBox.tsx  TitleBar.tsx  primitives.tsx
src/pages/: About.tsx  Automation.tsx  Cleaner.tsx  History.tsx  Home.tsx  Memory.tsx  Placeholder.tsx  Processes.tsx  Settings.tsx
src/system/: format.ts  paging.ts  types.ts  useClean.ts  useMemory.ts  useSettings.ts  useTheme.ts
