[package]
name = "memora"
version = "0.1.0"
description = "Memora — Windows 11 memory manager"
authors = ["Memora"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name from colliding with the bin name on Windows.
name = "memora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_SystemInformation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Wdk_System_SystemInformation",
  "UI",
  "UI_ViewManagement",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
